--- a/index.html
+++ b/index.html
@@ -178,52 +178,53 @@
       <div class="user">User 5</div> -->
     </div>
     <script>
-      let users = [
-        {
-          firstName: "Uthman",
-          lastName: "Dantata",
-          email: "uthman@gmail.com",
-          profileImage: "images/uthman.png",
-          group: 1,
-        },
+      let users = [];
+      // let users = [
+      //   {
+      //     firstName: "Uthman",
+      //     lastName: "Dantata",
+      //     email: "uthman@gmail.com",
+      //     profileImage: "images/uthman.png",
+      //     group: 1,
+      //   },
 
-        {
-          firstName: "Aisosa",
-          lastName: "Oyakhire",
-          email: "aisosaoyakhire@gmail.com",
-          profileImage: "images/aisosa.png",
-          group: 2,
-        },
+      //   {
+      //     firstName: "Aisosa",
+      //     lastName: "Oyakhire",
+      //     email: "aisosaoyakhire@gmail.com",
+      //     profileImage: "images/aisosa.png",
+      //     group: 2,
+      //   },
 
-        {
-          firstName: "Grace",
-          lastName: "Adie",
-          email: "graceadie@gmail.com",
-          profileImage: "images/grace.png",
-          group: 2,
-        },
-        {
-          firstName: "Sherifah",
-          lastName: "Omitogun",
-          email: "sherifahomitigun@gmail.com",
-          profileImage: "images/sherifah.png",
-          group: 1,
-        },
-        {
-          firstName: "Vincent",
-          lastName: "Nkem",
-          email: "nkemvincent@gmail.com",
-          profileImage: "images/vincent.png",
-          group: 3,
-        },
-        {
-          firstName: "Kawthar",
-          lastName: "Sulaiman",
-          email: "sulaimankawthar@gmail.com",
-          profileImage: "images/kawthar.png",
-          group: 3,
-        },
-      ];
+      //   {
+      //     firstName: "Grace",
+      //     lastName: "Adie",
+      //     email: "graceadie@gmail.com",
+      //     profileImage: "images/grace.png",
+      //     group: 2,
+      //   },
+      //   {
+      //     firstName: "Sherifah",
+      //     lastName: "Omitogun",
+      //     email: "sherifahomitigun@gmail.com",
+      //     profileImage: "images/sherifah.png",
+      //     group: 1,
+      //   },
+      //   {
+      //     firstName: "Vincent",
+      //     lastName: "Nkem",
+      //     email: "nkemvincent@gmail.com",
+      //     profileImage: "images/vincent.png",
+      //     group: 3,
+      //   },
+      //   {
+      //     firstName: "Kawthar",
+      //     lastName: "Sulaiman",
+      //     email: "sulaimankawthar@gmail.com",
+      //     profileImage: "images/kawthar.png",
+      //     group: 3,
+      //   },
+      // ];
 
       let newUserList = [
         {
@@ -261,6 +262,7 @@
         localStorage.setItem("users", JSON.stringify(users));
       }
       users = JSON.parse(localStorage.getItem("users"));
+      // users = JSON.parse(localStorage.getItem("users"));
       // users = JSON.parse(users);
 
       //Target the DOM elements
